Add VSCode settings to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,41 @@ firebase-debug.log*
 pids
 *.pid
 *.seed
+
+# VSCode settings
+.vscode/
+*.code-workspace
+.vscode-test/
+*.vscode-test/
+*.code-workspace
+.vscode/extensions.json
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/launch.json
+.vscode/snippets/
+.vscode/keybindings.json
+.vscode/keybindings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/extensions.json
+.vscode/settings.json
+.vscode/snippets/
+.vscode/keybindings.json
+.vscode/keybindings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/extensions.json
+.vscode/settings.json
+.vscode/snippets/
+.vscode/keybindings.json
+.vscode/keybindings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/extensions.json
+.vscode/settings.json
+.vscode/snippets/
+.vscode/keybindings.json
 *.pid.lock
 *.csv
 
